--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,16 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ index.php/$1 [QSA,L]	
 </IfModule>
-#ErrorDocument 404 ./www/404.php
 Options -MultiViews
+
+# Désactivation du cache pour les fichiers statiques
+# a dégager pour la mise en prod
+<filesMatch "\.(html|htm|js|css)$">
+  FileETag None
+  <ifModule mod_headers.c>
+     Header unset ETag
+     Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+     Header set Pragma "no-cache"
+     Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
+  </ifModule>
+</filesMatch>
